--- a/estilos/style.css
+++ b/estilos/style.css
@@ -63,7 +63,7 @@ header > p {
 
     max-width: 500px;
     margin: auto;
-    margin-bottom: 20px;
+    padding-bottom: 50px;
 
     padding-right: 10px;
     padding-left: 10px;
